added match times & locs to bracket

--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td width="160">&#160;</td>
+						<td width="175">&#160;</td>
 						<td width="15">&#160;</td>
 						<td width="20">&#160;</td>
-						<td width="160">&#160;</td>
+						<td width="175">&#160;</td>
 						<td width="15">&#160;</td>
 						<td width="20">&#160;</td>
-						<td width="160">&#160;</td>
+						<td width="175">&#160;</td>
 						<td width="15">&#160;</td>
 						<td width="20">&#160;</td>
-						<td width="160">&#160;</td>
+						<td width="175">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 						<td rowspan="4" class="line from-above">&#160;</td>
 						<td rowspan="7" class="line from-above">&#160;</td>
 						<td rowspan="3"></td>
@@ -112,7 +112,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -125,7 +125,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -140,7 +140,7 @@
 					<tr>
 						<td class="hs"><div></div></td>
 						<td rowspan="6"></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -153,7 +153,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -167,7 +167,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 						<td rowspan="18"></td>
 					</tr>
 					<tr>
@@ -181,7 +181,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -196,7 +196,7 @@
 					<tr>
 						<td class="hs"><div></div></td>
 						<td rowspan="6"></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -209,7 +209,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -222,7 +222,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 						<td rowspan="10"></td>
 					</tr>
 					<tr>
@@ -236,7 +236,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -251,7 +251,7 @@
 					<tr>
 						<td class="hs"><div></div></td>
 						<td rowspan="6"></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -264,7 +264,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -278,7 +278,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 						<td rowspan="9"></td>
 						<td rowspan="2">&#160;</td>
 					</tr>
@@ -293,7 +293,7 @@
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
-						<td rowspan="2">&#160;</td>
+						<td rowspan="2" class="details">&#160;</td>
 					</tr>
 					<tr>
 						<td class="hs"><div></div></td>
@@ -352,7 +352,7 @@
 	<script src="team.js"></script>
 	<script>
 		var NAMES = ["Brazil", "Croatia", "Mexico", "Cameroon", "Spain", "Netherlands", "Chile", "Australia", "Colombia", "Greece", "Ivory Coast", "Japan", "Uruguay", "Costa Rica", "England", "Italy", "Switzerland", "Ecuador", "France", "Honduras", "Argentina", "Bosnia & Herz.", "Iran", "Nigeria", "Germany", "Portugal", "Ghana", "United States", "Belgium", "Algeria", "Russia", "Korea Republic"];
-		var MATCH_DETAILS = [["Arena de Sao Paulo, Sao Paulo", [5,12,20,0]],["Arena das Dunas, Natal", [5,13,16,0]],["Arena Fonte Nova, Salvador", [5,13,19,0]],["Arena Pantanal, Cuiaba", [5,13,22,0]],["Estadio Mineirao, Belo Horizonte", [5,14,16,0]],["Arena Pernambuco, Recife", [5,15,1,0]],["Estadio Castelao, Fortaleza", [5,14,19,0]],["Arena Amazonia, Manaus", [5,14,22,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,15,16,0]],["Estadio Beira-Rio, Porto Alegre", [5,15,19,0]],["Estadio do Maracana, Rio de Janeiro", [5,15,22,0]],["Arena da Baixada, Curitiba", [5,16,19,0]],["Arena Fonte Nova, Salvador", [5,16,16,0]],["Arena das Dunas, Natal", [5,16,22,0]],["Estadio Mineirao, Belo Horizonte", [5,17,16,0]],["Arena Pantanal, Cuiaba", [5,17,22,0]],["Estadio Castelao, Fortaleza", [5,17,19,0]],["Arena Amazonia, Manaus", [5,18,22,0]],["Estadio do Maracana, Rio de Janeiro", [5,18,19,0]],["Estadio Beira-Rio, Porto Alegre", [5,18,16,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,19,16,0]],["Arena das Dunas, Natal", [5,19,22,0]],["Arena de Sao Paulo, Sao Paulo", [5,19,19,0]],["Arena Pernambuco, Recife", [5,20,16,0]],["Arena Fonte Nova, Salvador", [5,20,19,0]],["Arena da Baixada, Curitiba", [5,20,22,0]],["Estadio Mineirao, Belo Horizonte", [5,21,16,0]],["Arena Pantanal, Cuiaba", [5,21,22,0]],["Estadio Castelao, Fortaleza", [5,21,19,0]],["Arena Amazonia, Manaus", [5,22,22,0]],["Estadio do Maracana, Rio de Janeiro", [5,22,16,0]],["Estadio Beira-Rio, Porto Alegre", [5,22,19,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,23,20,0]],["Arena Pernambuco, Recife", [5,23,20,0]],["Arena da Baixada, Curitiba", [5,23,16,0]],["Arena de Sao Paulo, Sao Paulo", [5,23,16,0]],["Arena Pantanal, Cuiaba", [5,24,20,0]],["Estadio Castelao, Fortaleza", [5,24,20,0]],["Arena das Dunas, Natal", [5,24,16,0]],["Estadio Mineirao, Belo Horizonte", [5,24,16,0]],["Arena Amazonia, Manaus", [5,25,20,0]],["Estadio do Maracana, Rio de Janeiro", [5,25,20,0]],["Estadio Beira-Rio, Porto Alegre", [5,25,16,0]],["Arena Fonte Nova, Salvador", [5,26,16,0]],["Arena Pernambuco, Recife", [5,26,16,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,26,16,0]],["Arena de Sao Paulo, Sao Paulo", [5,26,20,0]],["Arena da Baixada, Curitiba", [5,26,20,0]]];
+		var MATCH_DETAILS = [["Arena de Sao Paulo, Sao Paulo", [5,12,20,0]],["Arena das Dunas, Natal", [5,13,16,0]],["Arena Fonte Nova, Salvador", [5,13,19,0]],["Arena Pantanal, Cuiaba", [5,13,22,0]],["Estadio Mineirao, Belo Horizonte", [5,14,16,0]],["Arena Pernambuco, Recife", [5,15,1,0]],["Estadio Castelao, Fortaleza", [5,14,19,0]],["Arena Amazonia, Manaus", [5,14,22,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,15,16,0]],["Estadio Beira-Rio, Porto Alegre", [5,15,19,0]],["Estadio do Maracana, Rio de Janeiro", [5,15,22,0]],["Arena da Baixada, Curitiba", [5,16,19,0]],["Arena Fonte Nova, Salvador", [5,16,16,0]],["Arena das Dunas, Natal", [5,16,22,0]],["Estadio Mineirao, Belo Horizonte", [5,17,16,0]],["Arena Pantanal, Cuiaba", [5,17,22,0]],["Estadio Castelao, Fortaleza", [5,17,19,0]],["Arena Amazonia, Manaus", [5,18,22,0]],["Estadio do Maracana, Rio de Janeiro", [5,18,19,0]],["Estadio Beira-Rio, Porto Alegre", [5,18,16,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,19,16,0]],["Arena das Dunas, Natal", [5,19,22,0]],["Arena de Sao Paulo, Sao Paulo", [5,19,19,0]],["Arena Pernambuco, Recife", [5,20,16,0]],["Arena Fonte Nova, Salvador", [5,20,19,0]],["Arena da Baixada, Curitiba", [5,20,22,0]],["Estadio Mineirao, Belo Horizonte", [5,21,16,0]],["Arena Pantanal, Cuiaba", [5,21,22,0]],["Estadio Castelao, Fortaleza", [5,21,19,0]],["Arena Amazonia, Manaus", [5,22,22,0]],["Estadio do Maracana, Rio de Janeiro", [5,22,16,0]],["Estadio Beira-Rio, Porto Alegre", [5,22,19,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,23,20,0]],["Arena Pernambuco, Recife", [5,23,20,0]],["Arena da Baixada, Curitiba", [5,23,16,0]],["Arena de Sao Paulo, Sao Paulo", [5,23,16,0]],["Arena Pantanal, Cuiaba", [5,24,20,0]],["Estadio Castelao, Fortaleza", [5,24,20,0]],["Arena das Dunas, Natal", [5,24,16,0]],["Estadio Mineirao, Belo Horizonte", [5,24,16,0]],["Arena Amazonia, Manaus", [5,25,20,0]],["Estadio do Maracana, Rio de Janeiro", [5,25,20,0]],["Estadio Beira-Rio, Porto Alegre", [5,25,16,0]],["Arena Fonte Nova, Salvador", [5,26,16,0]],["Arena Pernambuco, Recife", [5,26,16,0]],["Estadio Nacional Mane Garrincha, Brasilia", [5,26,16,0]],["Arena de Sao Paulo, Sao Paulo", [5,26,20,0]],["Arena da Baixada, Curitiba", [5,26,20,0]],["Belo Horizonte", [5,28,16,0]],["Fortaleza", [6,4,16,0]],["Rio de Janeiro", [5,28,20,0]],["Belo Horizonte", [6,8,20,0]],["Brasilia", [5,30,16,0]],["Rio de Janeiro", [6,4,20,0]],["Porto Alegre", [5,30,20,0]],["Rio de Janeiro", [6,13,19,0]],["Fortaleza", [5,29,16,0]],["Salvador", [6,5,16,0]],["Recife", [5,29,20,0]],["Sao Paulo", [6,9,20,0]],["Sao Paulo", [6,1,16,0]],["Brasilia", [6,5,20,0]],["Salvador", [6,1,20,0]]];
 		var SCORES = 'N0O~P~rG!6.rAfP~y4gD^rQ.nJ{v46~6Evzj~vkQ+1CFH';
 		Brazil2014.init(NAMES, MATCH_DETAILS, SCORES);
 		
