tabs looking pretty good

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			<div id="group-tab-links"></div>
 			<div><a href="#Bracket">Knockout</a></div>
 		</div>
-		
+
 		<div class="tab-content">
 			<div id="group-tab-content"></div>
 			<div id="Bracket" class="tab">
@@ -357,7 +357,7 @@
 		Brazil2014.init(NAMES, MATCH_DETAILS, SCORES);
 		
 		$('.tabs #A').show();
-		$('.tabs .tab-links a').first().parent('li').addClass('active');
+		$('.tabs .tab-links a').first().parent('div').addClass('active');
 		$('.tabbed-buttons #group-buttons').show();
 		
         $('.tabs .tab-links a').on('click', function(e)  {
