--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 	<div class="tabs">
 		<div class="tab-links">
 			<div id="group-tab-links"></div>
-			<div><a href="#Bracket">Knockout</a></div>
+			<div id="bracket-tab-link"><a href="#Bracket">Knockout</a></div>
+			<hr>
 		</div>
-
 		<div class="tab-content">
 			<div id="group-tab-content"></div>
 			<div id="Bracket" class="tab">
