--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	</div>
 	<div class="tabs">
 		<div class="tab-links">
-			<div id="group-tab-links"></div>
-			<div id="bracket-tab-link"><a href="#Bracket">Knockout</a></div>
+			<div id="group-tab-links"></div><!--
+			--><div id="bracket-tab-link"><a href="#Bracket">Knockout</a></div>
 			<hr>
 		</div>
 		<div class="tab-content">
