knockout tab as tall as rest

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	<div class="tabs">
 		<div class="tab-links">
 			<div id="group-tab-links"></div><!--
-			--><div id="bracket-tab-link"><a href="#Bracket">Knockout</a></div>
+			--><div id="bracket-tab-link"><a href="#Bracket"><div class="leftflags"><img src="flags/spacer.png"><br><img src="flags/spacer.png"></div>Knockout</a></div>
 			<hr>
 		</div>
 		<div class="tab-content">
