fixing single-group reset after realScores/decodedGroupStage eliminated as properties of tournament

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
         });
         $("#buttons").on('click', "#resetOne", function() {
             var g = $('#tabs #tab-links .active-tab a').attr('href').charCodeAt(1)-65;
-            Brazil2014.groups[g].load(Brazil2014.decodedGroupStage.substring(g*12, g*12+12));
+            Brazil2014.load(SCORES, g);
         });
         $("#buttons").on('click', "#resetAll", function() {
             Brazil2014.load(SCORES);
