--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel='stylesheet' href='tabs.css' />
 <link rel='stylesheet' href='bracket.css' />
 <link rel='stylesheet' href='buttons.css' />
+<link rel="icon" type="image/png" href="favicon.png">
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
 </head>
 <body>
