buttons text, backup fonts

--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@
     </div>
     <div id="buttons">
         <div id="row1">
-            <div class="glossybutton" id="save"><a>Save scores</a></div>
-            <div class="glossybutton" id="load"><a>Load scores</a></div>
+            <div class="glossybutton" id="save"><a>Save tournament</a></div>
+            <div class="glossybutton" id="load"><a>Load tournament</a></div>
         </div>
         <div id="row2">
             <div id="group-buttons">
